# spritz

./: .gitignore  LICENSE  README.md  __init__.py  base85.py  base85.rs  box.py  box_test.py  sbox.py  sbox_test.py  spritz.py  spritz.rs  spritz_prof.py  spritz_test.py
python/: box.py  box_prof.py  box_test.py  sbox.py  spritz.py  spritz_prof.py  spritz_test.py
rust/: Cargo.toml
rust/src/: base85.rs  lib.rs  main.rs  sbox.rs  spritz.rs
rust/src/tests/: sbox_test.rs
